Fix vertical alignment, remove useless properties

--- a/src/index.scss
+++ b/src/index.scss
@@ -2059,8 +2059,7 @@ button:active .icon {
 }
 
 .progress-circle {
-  align-items: center;
-  justify-items: center;
+  transform: translateY(0.2em);
 
   &::before {
     content: '';
